--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
 
+<head>
+	<title>Coursera Project</title>
+</head>
+
+<body>
+<h1> Coursera Project!! </h1>
 </body>
+
 </html>
